--- a/.gitignore
+++ b/.gitignore
@@ -389,3 +389,20 @@ COSC363/Lab03_Files/build/CMakeFiles/Yard.out.dir/link.txt
 COSC363/Lab03_Files/build/CMakeFiles/Yard.out.dir/linkLibs.rsp
 COSC363/Lab03_Files/build/CMakeFiles/Yard.out.dir/objects1.rsp
 COSC363/Lab03_Files/build/CMakeFiles/Yard.out.dir/progress.make
+COSC363/Lab03_Files/build/Earth.out.exe
+COSC363/Lab03_Files/build/ToyTrain.out.exe
+COSC363/Lab03_Files/build/Yard.out.exe
+COSC363/Lab03_Files/build/CMakeFiles/Earth.out.dir/compiler_depend.internal
+COSC363/Lab03_Files/build/CMakeFiles/Earth.out.dir/objects.a
+COSC363/Lab03_Files/build/CMakeFiles/Earth.out.dir/III_Earth/Earth.cpp.obj
+COSC363/Lab03_Files/build/CMakeFiles/Earth.out.dir/III_Earth/Earth.cpp.obj.d
+COSC363/Lab03_Files/build/CMakeFiles/ToyTrain.out.dir/compiler_depend.internal
+COSC363/Lab03_Files/build/CMakeFiles/ToyTrain.out.dir/objects.a
+COSC363/Lab03_Files/build/CMakeFiles/ToyTrain.out.dir/I_ToyTrain/RailModels.cpp.obj
+COSC363/Lab03_Files/build/CMakeFiles/ToyTrain.out.dir/I_ToyTrain/RailModels.cpp.obj.d
+COSC363/Lab03_Files/build/CMakeFiles/ToyTrain.out.dir/I_ToyTrain/ToyTrain.cpp.obj
+COSC363/Lab03_Files/build/CMakeFiles/ToyTrain.out.dir/I_ToyTrain/ToyTrain.cpp.obj.d
+COSC363/Lab03_Files/build/CMakeFiles/Yard.out.dir/compiler_depend.internal
+COSC363/Lab03_Files/build/CMakeFiles/Yard.out.dir/objects.a
+COSC363/Lab03_Files/build/CMakeFiles/Yard.out.dir/II_Yard/Yard.cpp.obj
+COSC363/Lab03_Files/build/CMakeFiles/Yard.out.dir/II_Yard/Yard.cpp.obj.d
